# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  31 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> g-cpan.pl: Applied fix
  for case-less matching of packages names. #69464

  31 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> portage.py: Updated
  ExtractKernelVersion() to support 2.6.9's new localversion. #67804
  Reordered a cache update and a return statement so that the cache is
  actually updated in ververify. #69523

  31 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> bin/ebuild: Added missing
  portage_util import.

  29 Oct 2004; Brian Harring <ferringb@gentoo.org> emerge: Close stdin after 
  the spawn fork for rsync, not in global scope.  #68946

  29 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> emerge: Fixed issue where
  emerge adds package to world when --onlydeps is specified. #69260
  Fixed issue where emerge was adding packages to world when --uprade is
  specified even if the package is already installed. #69287 Fixed logic
  in path/to/ebuild check so that symlinks do not cause false positives.

  29 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> dispatch-conf: Added usata's
  fix for mac-os compatibility. #69304

  29 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> getbinpkg.py: Reversed the
  logic of ftp passive-mode selection. #69371

  28 Oct 2004; Brian Harring <ferringb@gentoo.org> portage.py: Closed out 
  an issue with config.reset() gradually nuking items out of backupenv- 
  identified by Ludovic Aubry, solved w/ his provided fix. (#69388)

  28 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> emergehelp.py: Fixed up
  some incorrect descriptions. Added documentation for new and changed
  functionality. Removed documentation for deprecated options.
